--- a/events/mlc/faqs.html
+++ b/events/mlc/faqs.html
@@ -84,44 +84,28 @@
                   </li>
 
                   <li class="nav-item">
-                    <a href="/ml/#about">About</a>
+                    <a href="faqs">FAQs</a>
                   </li>
                   <li class="nav-item">
-                    <a href="/ml/#contact">Contact</a>
+                    <a href="rules">Rules</a>
                   </li>
-                  <li class="nav-item nav-item-has-children">
-                    <a href="javascript:void(0)"> Events </a>
-                    <ul class="ud-submenu">
-                     <li class="ud-submenu-item">
-                        <a href="/ml/events/logicloom1/" class="ud-submenu-link">
-                          LogicLooM (Margazhi edition)
-                        </a>
-                      </li>
-                      <li class="ud-submenu-item">
-                        <a href="/ml/events/logicloom2/" class="ud-submenu-link">
-                          LogicLooM 2.0 (May - Jun 2024)
-                        </a>
-                      </li>
-                      <li class="ud-submenu-item">
-                        <a href="/ml/events/mlc/" class="ud-submenu-link">
-                          ML Challenge 1.0, 2.0
-                        </a>
-                      </li>
-                      <li class="ud-submenu-item">
-                        <a href="/ml/events/pysprint" class="ud-submenu-link">
-                          Pythonic Sprint
-                        </a>
-                      </li>
-                    </ul>
+                  <li class="nav-item">
+                    <a href="schedule">Schedule</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="results">Results</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="img/aimlc_v2_guide.pdf">2.0 Guidebook</a>
                   </li>
                 </ul>
               </div>
 
-              <!--<div class="navbar-btn d-none d-sm-inline-block">
-                <a class="ud-main-btn ud-white-btn" href="javascript:void(0)">
-                  Get Started
+<div class="navbar-btn">
+                <a class="ud-main-btn ud-white-btn" href="https://wayanadonline.unaux.com/mlc.php" target="_blank">
+                  Test Run Interface
                 </a>
-              </div>-->
+              </div>
             </nav>
           </div>
         </div>
@@ -130,14 +114,17 @@
     <!-- ====== Header End ====== -->
 
       <!-- ====== Hero Start ====== -->
-    <section class="ud-hero" id="home" "style="background-image: url('img/banner1.jpg')">
+    <section class="ud-hero" id="home" style="background-image: url('img/banner1.jpg')">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
             <div class="ud-hero-content wow fadeInUp" data-wow-delay=".2s">
-              <h1 class="ud-hero-title">
-                Frequently Asked Questions
+              <h1 class="ud-hero-title" style="text-shadow: 2px 2px red;">
+                The PAN-BS AI-ML Challenge
               </h1>
+               <p class="ud-hero-desc">
+              <i class="lni lni-calendar"></i> Aug 5 - 11 <i class="lni lni-map-marker"></i> Online
+              </p>
             </div>
           </div>
         </div>
@@ -145,21 +132,111 @@
     </section>
     <!-- ====== Hero End ====== -->
 
-     <!-- ====== About Start ====== -->
-    <section id="about" class="ud-about">
-      <div class="container">
-        <div class="ud-about-wrapper wow fadeInUp" data-wow-delay=".1s">
-          <div class="ud-about-content-wrapper">
-            <div class="ud-about-content" style="max-width:100%;">
-              <h2></h2>
-              <p>
-              </p>
-          </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- ====== About End ====== -->
+    <!-- ====== About Start ====== -->
+<section id="about" class="ud-about">
+  <div class="container">
+    <div class="ud-about-wrapper wow fadeInUp" data-wow-delay=".1s">
+      <div class="ud-about-content-wrapper">
+        <div class="ud-about-content" style="max-width:100%;">
+          <h2>FAQs</h2>      
+
+        <div class="faq-item">
+      <p><i class="lni lni-question-circle"></i> <strong>#1</strong> I'm from Wayanad, but I'd like to team up with my friend who's from Gir.</p>
+      <p>Of course, it's perfectly fine for a team to include members from different houses.</p>
+    </div>
+    <br><br>
+
+    <div class="faq-item">
+      <p><i class="lni lni-question-circle"></i> <strong>#2</strong> I've already registered a few days ago as an individual participant. Now I wish to team up with another student who has the same issue as mine. What should I do?</p>
+      <p><strong>Please re-submit the <a href="https://forms.gle/eD1WxU9sEWaEk2WL8" target="_blank">registration form</a> with the updated team member details.</strong> Either of you can submit. Our automated scripts will detect such cases and both of your previous responses will be discarded after processing. You will be issued one team ID.</p>
+    </div>
+    <br><br>
+
+    <div class="faq-item">
+      <p><i class="lni lni-question-circle"></i> <strong>#3</strong> Will the organizers create the teams?</p>
+      <p>With around 700 IITM BS students present in our LogicLooM and ML Challenge groups (combined), we encourage you to form teams through discussions and by sharing your skills with each other. Collaboration is an important aspect of these events, so we highly recommend working together if possible.</p>
+      <p>However, if you're unable to find a team-mate, register 'solo'. <strong>Once registration closes and the data is processed, we will pair solo registrants into teams according to the following priority rules:</strong></p>
+      <ul>
+        <li><strong>Batch Similarity:</strong> We will prioritize pairing students from the same or adjacent batches.</li>
+        <li><strong>Track Preference:</strong> We will ensure that team members are assigned to the same track they selected during registration.</li>
+      </ul>
+      <p>By following these rules, we aim to create balanced and compatible teams to enhance your event experience.</p>
+      <p><strong>All participants will receive a confirmation auto-mail from 'no-reply wayanad' regarding the team allocation details and team ID.</strong></p>
+    </div>
+    <br><br>
+
+    <div class="faq-item">
+      <p><i class="lni lni-question-circle"></i> <strong>#4</strong> What if I registered solo because I want to participate individually, rather than because I couldn't find a teammate?</p>
+      <p><strong>We understand that some participants may prefer to compete individually.</strong> If you possess the necessary skills (proficiency in Python and ML/NLP), please complete the <a href="https://forms.gle/HThDbun5qaDnF7oq9" target="_blank">Request Form</a>. Note that this form is for requesting individual participation and is not the registration form; you should have already submitted your registration form beforehand.</p>
+      <p>If you meet the criteria outlined in the Request Form, your request will be approved, and <strong>you will be excluded from the team allocation process.</strong></p>
+    </div>
+    <br><br>
+
+    <div class="faq-item">
+      <p><i class="lni lni-question-circle"></i> <strong>#5</strong> I've already registered my '2 member' team, but now wish to add the 3rd participant. Am I allowed to make changes?</p>
+      <p>You can't edit the previous response. Please re-submit the <a href="https://forms.gle/eD1WxU9sEWaEk2WL8" target="_blank">registration form</a> freshly with the updated team member details. Last response will be considered.</p>
+    </div>
+    <br><br>
+
+    <div class="faq-item">
+      <p><i class="lni lni-question-circle"></i> <strong>#6</strong> Our team opted for the AI-Generated Text detection task. Can we modify our track as well?</p>
+      <p>Yes, re-submit the <a href="https://forms.gle/eD1WxU9sEWaEk2WL8" target="_blank">registration form</a> freshly with the updated track choice. Any changes are possible until the deadline.</p>
+    </div>
+    <br><br>
+
+    <div class="faq-item">
+      <p><i class="lni lni-question-circle"></i> <strong>#7</strong> I'm a fresher and not aware of ML. Should I participate?</p>
+      <p>You need not worry if you're just starting out and don't have a technical or coding background. We’re providing you with easy-to-understand resources and a detailed roadmap to help you get familiar with Python first.</p>
+      <p><strong>Our goal isn’t for you to master these intricate aspects right away, but rather to gain a solid understanding of the basics and how ML works.</strong> This will be a fantastic hands-on opportunity & learning experience. Give it a try. Learn, join our sessions and enjoy the challenge :)</p>
+    </div>
+    <br><br>
+
+    <div class="faq-item">
+      <p><i class="lni lni-question-circle"></i> <strong>#8</strong> Can a team participate in both the tasks?</p>
+      <p>No, one team can only opt for one track.</p>
+    </div>
+    <br><br>
+
+    <div class="faq-item">
+      <p><i class="lni lni-question-circle"></i> <strong>#9</strong> I was registered by my team-mate in Team A, but now I wish to change my team and join Team B. What should I do?</p>
+      <p><strong>A participant can only be a part of ONE team.</strong> Please submit or ask one of your new team-mates to re-submit the <a href="https://forms.gle/eD1WxU9sEWaEk2WL8" target="_blank">registration form</a> with the updated team details.</p>
+      <p>You must inform your previous team members regarding your decision to leave their team as one of them needs to re-submit the <a href="https://forms.gle/eD1WxU9sEWaEk2WL8" target="_blank">registration form</a> with their new structure (excluding you). Else, all participants from such teams will be desk-rejected from participating in the challenge.</p>
+    </div>
+    <br><br>
+
+    <div class="faq-item">
+      <p><i class="lni lni-question-circle"></i> <strong>#10</strong> One of my team members and I both filled out the form with the same team details. Will this lead to disqualification?</p>
+      <p>Don't worry. We have an automated process to detect such cases. Irrespective of the multiple responses, you both will be allotted the same team ID.</p>
+    </div>
+    <br><br>
+
+    <div class="faq-item">
+      <p><i class="lni lni-question-circle"></i> <strong>#11</strong> Are pre-trained fine-tuned models allowed?</p>
+      <p>Yes.</p>
+    </div>
+    <br><br>
+
+    <div class="faq-item">
+      <p><i class="lni lni-question-circle"></i> <strong>#12</strong> Is there some restriction in the libraries/models we can use?</p>
+      <p>Yes, there are specific restrictions for each track. You'll get complete clarity on 5th August 2024 when we release the detailed problem statements with the task-specific rules and resources.</p>
+    </div>
+    <br><br>
+
+    <div class="faq-item">
+      <p><i class="lni lni-question-circle"></i> <strong>#13</strong> Will there be any sessions to clarify doubts regarding the challenge?</p>
+      <p>Yes, there will be a discussion session with registered teams on 6th August to address any doubts regarding the challenge. Additionally, two more mentor assistance sessions will be hosted, which should help the teams during the training and development phase.</p>
+    </div>
+    <br><br>
+
+    <h3>Contact Us</h3>
+    <p>If you've any other questions, please raise them during the Orientation Open Session or start a conversation in our Whatsapp Discussion group. Organizers actively respond to queries there.</p>
+    <p>You can also write to the <strong>Organizers</strong> at <a href="mailto:wayanad-ml@ds.study.iitm.ac.in">wayanad-ml@ds.study.iitm.ac.in</a>.</p>  
+
+</div>
+    </div>
+  </div></div>
+</section>
+<!-- ====== About End ====== -->
 
     <!-- ====== Footer Start ====== -->
     <footer class="ud-footer wow fadeInUp" data-wow-delay=".15s">
