--- a/events/mlc/results.html
+++ b/events/mlc/results.html
@@ -103,7 +103,7 @@
 
 <div class="navbar-btn">
                 <a class="ud-main-btn ud-white-btn" href="https://wayanadonline.unaux.com/mlc.php" target="_blank">
-                  Test Run Interface
+                  Eval Interface
                 </a>
               </div>
             </nav>
@@ -139,7 +139,7 @@
       <div class="ud-about-content-wrapper">
         <div class="ud-about-content" style="max-width:100%;">
           <h2>Results</h2>      
-
+<p>For 2.0 edition, kindly check <a href="img/mlc2_results.pdf">here</a>.</p>
           <h3>Track - 2 Qualifying Teams</h3>
           <table class="table">
             <thead>
