--- a/events/mlc/index.html
+++ b/events/mlc/index.html
@@ -103,7 +103,7 @@
 
 <div class="navbar-btn">
                 <a class="ud-main-btn ud-white-btn" href="https://wayanadonline.unaux.com/mlc.php" target="_blank">
-                  Test Run Interface
+                  Eval Interface
                 </a>
               </div>
             </nav>
@@ -162,7 +162,7 @@
         <br><br>
         <i class="lni lni-checkmark-circle"></i> <strong>Track 2:</strong> With the rapid advancement of AI, distinguishing between human-written and AI-generated content is increasingly challenging. This challenge aims to explore the capabilities of ML models to accurately identify the origin of textual content, contributing to the development of robust techniques for detecting AI-generated text.
       </p>
-
+<br>
       <h2>Guests ✨</h2><br>
       <p style="color:#a3001f;"><b>Mr. Piyush Wairale</b><br>Course Instructor, IITM BS Program (DS)</p><br>
       <p style="color:#a3001f;"><b>Ms. Kothainayaki SK</b><br>Head, Student Affairs, IITM BS Programs</p>
