--- a/events/mlc/rules.html
+++ b/events/mlc/rules.html
@@ -103,7 +103,7 @@
 
 <div class="navbar-btn">
                 <a class="ud-main-btn ud-white-btn" href="https://wayanadonline.unaux.com/mlc.php" target="_blank">
-                  Test Run Interface
+                  Eval Interface
                 </a>
               </div>
             </nav>
