--- a/gallery.html
+++ b/gallery.html
@@ -33,8 +33,8 @@
 
 .gallery-item {
     /*width: calc(33.333% - 10px);  3 images per row */
-  width: 50px; /* Set width to 50 pixels */
-    height: 50px; /* Set height to 50 pixels */
+  width: 300px;
+    height: 300px;
     object-fit: cover; /* Ensure the image covers the area without distortion */
     cursor: pointer;
     transition: transform 0.2s;
@@ -92,8 +92,8 @@
 .next {
     right: 20px;
 }
- </style>
-  <style>
+</style>
+<style>
     .pagination {
     margin-top: 20px;
     display: flex;
@@ -102,15 +102,29 @@
 
 .pagination-button {
     margin: 0 5px;
-    padding: 10px;
+    padding: 10px 15px;
     border: none;
     background-color: #007bff;
     color: white;
     cursor: pointer;
+    border-radius: 5px;
+    font-weight: bold;
+    transition: background-color 0.3s, transform 0.2s;
 }
 
 .pagination-button:hover {
+  background-color: #0056b3;
+  transform: scale(1.05);
+}
+
+.pagination-button:active {
+    transform: scale(0.95);
+}
+
+/* Highlight current page */
+.pagination-button.active {
     background-color: #0056b3;
+    pointer-events: none;
 }
   </style>
 </head>
@@ -355,7 +369,7 @@
     //
 ];
 
-const itemsPerPage = 10;
+const itemsPerPage = 5;
 let currentPage = 1;
 
 function renderGallery() {
