--- a/gallery.html
+++ b/gallery.html
@@ -143,7 +143,7 @@
 }
 
 .loading-text {
-    color: white;
+    color: black;
     font-size: 24px;
     font-weight: bold;
     text-align: center;
@@ -377,7 +377,7 @@
     <!-- ====== Back To Top End ====== -->
 
     <script>
-      const images = [
+     const images = [
     "/ml/assets/images/logicloom/1.jpg",
     "/ml/assets/images/logicloom/2.jpg",
     "/ml/assets/images/logicloom/3.jpg",
@@ -390,8 +390,141 @@
     "/ml/assets/images/logicloom/DSC_8241.JPG",
     "/ml/assets/images/logicloom/DSC_7012.JPG",
     "/ml/assets/images/logicloom/DSC_7006.JPG",
-    "/ml/assets/images/logicloom/DSC_7007.JPG"
-    //
+    "/ml/assets/images/logicloom/DSC_7007.JPG",
+    "/ml/assets/images/logicloom/DSC_7013.JPG",
+    "/ml/assets/images/logicloom/DSC_8240.JPG",
+    "/ml/assets/images/logicloom/DSC_8244.JPG",
+    "/ml/assets/images/logicloom/DSC_7003.JPG",
+    "/ml/assets/images/logicloom/DSC07508.JPG",
+    "/ml/assets/images/logicloom/DSC07509.JPG",
+    "/ml/assets/images/logicloom/DSC_7002.JPG",
+    "/ml/assets/images/logicloom/DSC_8245.JPG",
+    "/ml/assets/images/logicloom/8.jpg",
+    "/ml/assets/images/logicloom/DSC_8247.JPG",
+    "/ml/assets/images/logicloom/DSC_7000.JPG",
+    "/ml/assets/images/logicloom/DSC_7014.JPG",
+    "/ml/assets/images/logicloom/DSC_7015.JPG",
+    "/ml/assets/images/logicloom/DSC_7001.JPG",
+    "/ml/assets/images/logicloom/DSC_8246.JPG",
+    "/ml/assets/images/logicloom/9.jpg",
+    "/ml/assets/images/logicloom/14.jpg",
+    "/ml/assets/images/logicloom/28.jpg",
+    "/ml/assets/images/logicloom/DSC_6967.JPG",
+    "/ml/assets/images/logicloom/DSC_6998.JPG",
+    "/ml/assets/images/logicloom/DSC_8221.JPG",
+    "/ml/assets/images/logicloom/DSC_8235.JPG",
+    "/ml/assets/images/logicloom/DSC_8234.JPG",
+    "/ml/assets/images/logicloom/DSC_8220.JPG",
+    "/ml/assets/images/logicloom/DSC_6999.JPG",
+    "/ml/assets/images/logicloom/DSC_6966.JPG",
+    "/ml/assets/images/logicloom/29.jpg",
+    "/ml/assets/images/logicloom/DSC_6972.JPG",
+    "/ml/assets/images/logicloom/15.jpg",
+    "/ml/assets/images/logicloom/17.jpg",
+    "/ml/assets/images/logicloom/DSC_6964.JPG",
+    "/ml/assets/images/logicloom/DSC_8236.JPG",
+    "/ml/assets/images/logicloom/DSC_8222.JPG",
+    "/ml/assets/images/logicloom/DSC_8223.JPG",
+    "/ml/assets/images/logicloom/DSC_8237.JPG",
+    "/ml/assets/images/logicloom/DSC_6971.JPG",
+    "/ml/assets/images/logicloom/DSC_6965.JPG",
+    "/ml/assets/images/logicloom/16.jpg",
+    "/ml/assets/images/logicloom/DSC_6975.JPG",
+    "/ml/assets/images/logicloom/12.jpg",
+    "/ml/assets/images/logicloom/DSC_8233.JPG",
+    "/ml/assets/images/logicloom/DSC_8227.JPG",
+    "/ml/assets/images/logicloom/DSC_8226.JPG",
+    "/ml/assets/images/logicloom/13.jpg",
+    "/ml/assets/images/logicloom/DSC_6974.JPG",
+    "/ml/assets/images/logicloom/DSC_6976.JPG",
+    "/ml/assets/images/logicloom/11.jpg",
+    "/ml/assets/images/logicloom/DSC_6989.JPG",
+    "/ml/assets/images/logicloom/DSC_8224.JPG",
+    "/ml/assets/images/logicloom/DSC_8218.JPG",
+    "/ml/assets/images/logicloom/DSC_8219.JPG",
+    "/ml/assets/images/logicloom/DSC_8225.JPG",
+    "/ml/assets/images/logicloom/DSC_6988.JPG",
+    "/ml/assets/images/logicloom/10.jpg",
+    "/ml/assets/images/logicloom/38.jpg",
+    "/ml/assets/images/logicloom/DSC_6977.JPG",
+    "/ml/assets/images/logicloom/21.jpg",
+    "/ml/assets/images/logicloom/35.jpg",
+    "/ml/assets/images/logicloom/DSC_6991.JPG",
+    "/ml/assets/images/logicloom/DSC_6985.JPG",
+    "/ml/assets/images/logicloom/DSC_8228.JPG",
+    "/ml/assets/images/logicloom/DSC_8214.JPG",
+    "/ml/assets/images/logicloom/DSC_8215.JPG",
+    "/ml/assets/images/logicloom/DSC_8229.JPG",
+    "/ml/assets/images/logicloom/DSC_6984.JPG",
+    "/ml/assets/images/logicloom/DSC_6990.JPG",
+    "/ml/assets/images/logicloom/34.jpg",
+    "/ml/assets/images/logicloom/20.jpg",
+    "/ml/assets/images/logicloom/36.jpg",
+    "/ml/assets/images/logicloom/DSC_6979.JPG",
+    "/ml/assets/images/logicloom/22.jpg",
+    "/ml/assets/images/logicloom/DSC_6986.JPG",
+    "/ml/assets/images/logicloom/DSC_8217.JPG",
+    "/ml/assets/images/logicloom/DSC_8216.JPG",
+    "/ml/assets/images/logicloom/DSC_6987.JPG",
+    "/ml/assets/images/logicloom/23.jpg",
+    "/ml/assets/images/logicloom/DSC_6978.JPG",
+    "/ml/assets/images/logicloom/37.jpg",
+    "/ml/assets/images/logicloom/33.jpg",
+    "/ml/assets/images/logicloom/DSC_6968.JPG",
+    "/ml/assets/images/logicloom/27.jpg",
+    "/ml/assets/images/logicloom/DSC_6983.JPG",
+    "/ml/assets/images/logicloom/DSC_6997.JPG",
+    "/ml/assets/images/logicloom/DSC_8212.JPG",
+    "/ml/assets/images/logicloom/DSC_8213.JPG",
+    "/ml/assets/images/logicloom/DSC_6996.JPG",
+    "/ml/assets/images/logicloom/39.jpeg",
+    "/ml/assets/images/logicloom/26.jpg",
+    "/ml/assets/images/logicloom/DSC_6969.JPG",
+    "/ml/assets/images/logicloom/32.jpg",
+    "/ml/assets/images/logicloom/18.jpg",
+    "/ml/assets/images/logicloom/24.jpg",
+    "/ml/assets/images/logicloom/30.jpg",
+    "/ml/assets/images/logicloom/DSC_6994.JPG",
+    "/ml/assets/images/logicloom/DSC_8211.JPG",
+    "/ml/assets/images/logicloom/DSC_8239.JPG",
+    "/ml/assets/images/logicloom/DSC_8238.JPG",
+    "/ml/assets/images/logicloom/DSC_6995.JPG",
+    "/ml/assets/images/logicloom/31.jpg",
+    "/ml/assets/images/logicloom/25.jpg",
+    "/ml/assets/images/logicloom/19.jpg",
+    "/ml/assets/images/logicloom/4.jpg",
+    "/ml/assets/images/logicloom/DSC07507.JPG",
+    "/ml/assets/images/logicloom/DSC07513.JPG",
+    "/ml/assets/images/logicloom/launch1.PNG",
+    "/ml/assets/images/logicloom/DSC07512.JPG",
+    "/ml/assets/images/logicloom/DSC07506.JPG",
+    "/ml/assets/images/logicloom/DSC_8060.JPG",
+    "/ml/assets/images/logicloom/5.jpg",
+    "/ml/assets/images/logicloom/7.jpg",
+    "/ml/assets/images/logicloom/DSC_8248.JPG",
+    "/ml/assets/images/logicloom/DSC07510.JPG",
+    "/ml/assets/images/logicloom/DSC07504.JPG",
+    "/ml/assets/images/logicloom/launch3.PNG",
+    "/ml/assets/images/logicloom/launch2.PNG",
+    "/ml/assets/images/logicloom/DSC07505.JPG",
+    "/ml/assets/images/logicloom/DSC07511.JPG",
+    "/ml/assets/images/logicloom/DSC_8063.JPG",
+    "/ml/assets/images/logicloom/6.jpg",
+    "/ml/assets/images/logicloom/2.jpg",
+    "/ml/assets/images/logicloom/DSC07515.JPG",
+    "/ml/assets/images/logicloom/DSC07501.JPG",
+    "/ml/assets/images/logicloom/DSC07500.JPG",
+    "/ml/assets/images/logicloom/DSC07514.JPG",
+    "/ml/assets/images/logicloom/3.jpg",
+    "/ml/assets/images/logicloom/1.jpg",
+    "/ml/assets/images/logicloom/DSC_7009.JPG",
+    "/ml/assets/images/logicloom/DSC07502.JPG",
+    "/ml/assets/images/logicloom/DSC07516.JPG",
+    "/ml/assets/images/logicloom/launch5.PNG",
+    "/ml/assets/images/logicloom/launch4.PNG",
+    "/ml/assets/images/logicloom/DSC07517.JPG",
+    "/ml/assets/images/logicloom/DSC07503.JPG",
+    "/ml/assets/images/logicloom/DSC_7008.JPG"
 ];
 
 const itemsPerPage = 5;
