--- a/gallery.html
+++ b/gallery.html
@@ -240,7 +240,7 @@
           <div class="ud-about-content-wrapper">
             <div class="ud-about-content" style="max-width:100%;">
                <div class="gallery" id="gallery"></div>
-              <div class="pagination" id="pagination"></div>
+              <div class="pagination" id="pagination" style="max-width:100%;"></div>
           </div>
         </div>
       </div>
