--- a/gallery.html
+++ b/gallery.html
@@ -249,7 +249,7 @@
     </section>
 
     <div id="loadingOverlay" class="loading-overlay" style="display: none;">
-    <span class="loading-text">Loading...</span>
+    <span class="loading-text">Good things take time to load...</span>
 </div>
 
     <div id="lightbox" class="lightbox" style="display:none;">
