--- a/gallery.html
+++ b/gallery.html
@@ -32,8 +32,8 @@
 }
 
 .gallery-item {
-    /*width: calc(33.333% - 10px);  3 images per row */
-  width: 300px;
+    width: calc(33.333% - 10px);  3 images per row
+  /*width: 300px;
     height: 300px;
     object-fit: cover; /* Ensure the image covers the area without distortion */
     cursor: pointer;
